--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">DigiShop</string>
     <string name="enter_a_username">Enter a username</string>
     <string name="login">Login</string>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
+    <string name="category">Category</string>
+    <string name="profile">Profile</string>
 </resources>
